FB app Reg working for now

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  firebase_core: "1.6.0"
+  firebase_app_check: "^0.0.2+1"
+
   flutter_localizations:
     sdk: flutter
 
