yeeeeeeeeeeeeeeeeea, replaced realtime db with firestore, can now write guests into db

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,8 @@ dependencies:
     sdk: flutter
   firebase_core: "1.6.0"
   firebase_app_check: "^0.0.2+1"
-  firebase_database: "^8.0.0"
+  cloud_firestore: "^2.5.3"
+  http: "^0.13.3"
 
 
   flutter_localizations:
