Data now correctly being read AND displayed from db

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ flutter:
     - family: Freya
       fonts:
         - asset: fonts/freya-medium.ttf
+        - asset: fonts/freya-bold.ttf
+          style: normal
 
   assets:
     - graphics/
