--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,11 +33,16 @@ dependencies:
 
   cupertino_icons: ^1.0.2
   material: ^1.0.0+2
+  syncfusion_flutter_datagrid: ^19.3.46
+  syncfusion_flutter_datagrid_export: ^19.3.46-beta
+  intl: ^0.17.0
+  intl_phone_number_input: ^0.7.0+2
+  phone_number: ^0.12.0+1
+  logger: ^1.1.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  intl: ^0.17.0-nullsafety.2
 
   flutter_lints: ^1.0.0
 
